--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -111,6 +111,23 @@ const jsonLd = {
         </div>
     </div>
 
+<script src="https://giscus.app/client.js"
+        data-repo="TheLittleQuteGDH/pinglun-save"
+        data-repo-id="R_kgDOPk8XAQ"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOPk8XAc4CupT7"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-CN"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+</script>
+
     <div class="flex flex-col md:flex-row justify-between mb-4 gap-4 overflow-hidden w-full">
         <a href={entry.data.nextSlug ? getPostUrlBySlug(entry.data.nextSlug) : "#"}
            class:list={["w-full font-bold overflow-hidden active:scale-95", {"pointer-events-none": !entry.data.nextSlug}]}>
