--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -111,7 +111,7 @@ const jsonLd = {
         </div>
     </div>
 
-<script src="https://giscus.app/client.js"
+   <script src="https://giscus.app/client.js"
         data-repo="TheLittleQuteGDH/pinglun-save"
         data-repo-id="R_kgDOPk8XAQ"
         data-category="Announcements"
@@ -121,7 +121,7 @@ const jsonLd = {
         data-reactions-enabled="1"
         data-emit-metadata="0"
         data-input-position="top"
-        data-theme="preferred_color_scheme"
+        data-theme="dark"
         data-lang="zh-CN"
         data-loading="lazy"
         crossorigin="anonymous"
