--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -121,7 +121,7 @@ const jsonLd = {
         data-reactions-enabled="1"
         data-emit-metadata="0"
         data-input-position="top"
-        data-theme="dark"
+        data-theme="noborder_gray"
         data-lang="zh-CN"
         data-loading="lazy"
         crossorigin="anonymous"
@@ -151,3 +151,4 @@ const jsonLd = {
     </div>
 
 </MainGridLayout>
+
