--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -13,6 +13,7 @@ import ImageWrapper from "../../components/misc/ImageWrapper.astro";
 import PostMetadata from "../../components/PostMeta.astro";
 import { profileConfig, siteConfig } from "../../config";
 import { formatDateToYYYYMMDD } from "../../utils/date-utils";
+import Giscus from "../../components/GiscusComment.astro";
 
 export async function getStaticPaths() {
 	const blogEntries = await getSortedPosts();
@@ -107,26 +108,9 @@ const jsonLd = {
             </Markdown>
 
             {licenseConfig.enable && <License title={entry.data.title} slug={entry.slug} pubDate={entry.data.published} class="mb-6 rounded-xl license-container onload-animation"></License>}
-
+        <GiscusComment repo="TheLittleQuteGDH/pinglun-save" repoId="R_kgDOPk8XAQ" category="Announcements" categoryId="DIC_kwDOPk8XAc4CupT7" />
         </div>
     </div>
-
-   <script src="https://giscus.app/client.js"
-        data-repo="TheLittleQuteGDH/pinglun-save"
-        data-repo-id="R_kgDOPk8XAQ"
-        data-category="Announcements"
-        data-category-id="DIC_kwDOPk8XAc4CupT7"
-        data-mapping="pathname"
-        data-strict="0"
-        data-reactions-enabled="1"
-        data-emit-metadata="0"
-        data-input-position="top"
-        data-theme="preferred_color_scheme"
-        data-lang="zh-CN"
-        data-loading="lazy"
-        crossorigin="anonymous"
-        async>
-</script>
 
     <div class="flex flex-col md:flex-row justify-between mb-4 gap-4 overflow-hidden w-full">
         <a href={entry.data.nextSlug ? getPostUrlBySlug(entry.data.nextSlug) : "#"}
@@ -151,6 +135,7 @@ const jsonLd = {
     </div>
 
 </MainGridLayout>
+
 
 
 
